--- a/assets/config.json
+++ b/assets/config.json
@@ -1,3 +1,5 @@
 {
-  "geoapifyApiKey": "YOUR_GEOAPIFY_API_KEY"
+  "geoapifyApiKey": "YOUR_GEOAPIFY_API_KEY",
+  "geoapifyHost": "api.geoapify.com",
+  "propertyServiceUrl": "https://g7eku3ruwr6e2hduscxavmi6zy0wsiel.lambda-url.ap-southeast-2.on.aws/"
 }
